# SMARTPI-full-

./: README.md  pyproject.toml
SmartPi/: README.md  pyproject.toml  text_model.py
SmartPi/SmartPiProject/: README.md  setup.py
SmartPi/SmartPiProject/smartpi/: gui.py  text_model.py
SmartPi/smartpi/: __init__.py  gui.py
